--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/testcookbook/js-cucumber-selenium#readme",
   "dependencies": {
-    "assert": "^1.4.1",
-    "chromedriver": "^2.24.1",
-    "cucumber": "^1.3.0",
-    "geckodriver": "^1.1.3",
-    "selenium-webdriver": "^3.0.0-beta-3"
+    "assert": "^1.5.0",
+    "chromedriver": "^76.0.1",
+    "cucumber": "^1.3.3",
+    "geckodriver": "^1.16.2",
+    "selenium-webdriver": "^3.6.0",
+    "webdriver-manager": "^12.1.6"
   }
 }
